tests/errors/main-parameters.ja
procedure main(int foo)
    skip
